kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hwg
  labels:
    app: hwg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hwg
  template:
    metadata:
      labels:
        app: hwg
    spec:
      containers:
        - name: patrickbrown-us
          image: 192.168.86.185:31836/hwg:0.0.8
          resources:
            requests:
              memory: 2G 
              cpu: "500m"
            limits:
              memory: 3G
              cpu: 1
          ports:
            - containerPort: 8080
