kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hwg
  labels:
    app: hwg
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: hwg
  type: ClusterIP
